--- a/app-todo/src/styles.scss
+++ b/app-todo/src/styles.scss
@@ -1,21 +1,31 @@
 @import './dist/scss/variables.scss';
-// fazer a importação do google fonts
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300;1,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
 
 *{
-    margin: 0;
-    padding: 0;
-    font-family: roboto;
-    font-weight: 400;
+  margin: 0;
+  padding: 0;
+  font-family: roboto;
+  font-weight: 400;
 }
 
 body{
-    background: $primary-background-color;
+  background: $primary-background-color;
 }
 
-// classe
+ul{
+  list-style: none;
+}
+
+textarea:focus, input:focus, button{
+  outline: none;
+}
+
+button{
+  cursor: pointer;
+}
+
+//Classes
 .container{
-    width: 350px;
-    margin: 50px auto;
+  width: 350px;
+  margin: 50px auto;
 }
