--- a/app-todo/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
+++ b/app-todo/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
@@ -1,1 +1,2 @@
-<input type="text" placeholder="Digite sua nova task aqui">
+<!--keyup, é utilizado quando o usário aperta o botão enter -->
+<input type="text" placeholder="Digite sua nova Task aqui..." [(ngModel)]="addItemTaskList" (keyup.enter)="submitItemTaskList()">
