--- a/app-todo/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/app-todo/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,23 +1,18 @@
-<section>
-    <ul>
-        <li>
-            <input type="checkbox">
-            <input type="text">
+<!--- Verificando se existe valor no array, se não vai mostrar a imagem que está no csss-->
+<section [ngClass]="{'loading': !taskList.length}">
+    <ul *ngIf="taskList.length">
+        <li *ngFor="let item of taskList; let i = index">
+            <input type="checkbox" [(ngModel)]="item.checked">
+            <input type="text" [(ngModel)]="item.task" [ngClass]="{'checked': item.checked}">
 
-            <button>
-                <img src="assets/icons/icon-trash.svg" alt="">
-            </button>
-        </li>
-
-        <li>
-            <input type="checkbox">
-            <input type="text" class="checked">
-
-            <button>
+            <button (click)="deleteItemTaskList(i)">
                 <img src="assets/icons/icon-trash.svg" alt="">
             </button>
         </li>
     </ul>
 </section>
-<app-todo-input-add-itens></app-todo-input-add-itens>
-<app-todo-button-delete-all></app-todo-button-delete-all>
+
+<!-- -->
+<app-todo-input-add-itens (emitItemTaskList)="setEmitTaskList($event)"></app-todo-input-add-itens>
+<!-- Verificando se existe valor no TaskList codição-->
+<app-todo-button-delete-all *ngIf="taskList.length" (click)="deleteAllTaskList()"></app-todo-button-delete-all>
